--- a/css/style.css
+++ b/css/style.css
@@ -153,19 +153,48 @@ main {
     width: 100%;
     margin: 104px 0 104px 0;
 }
+ol {
+    width: 100%;
+    height: 70%;
+    position: fixed;
+    overflow-y: scroll;
+}
 main li {
     width: 100%;
     min-height: 40px;
-    padding: 0 2% 0 2%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-wrap: break-word;
+    padding: 12px 2% 12px 2%;
     margin-top: 4px;
     border-radius: 2px;
     background-color: #DCDCDC;
 }
+ol p {
+    max-width: 100%;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    text-align: left;
+
+    
+}
+b {
+    font-weight: 700;
+}
 .message {
     background-color: #FFFFFF;
 }
-.private_message {
+.private-message {
     background-color: #FFDEDE;
+}
+.time {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+
+    color: #AAAAAA;
 }
 footer {
     top: auto;
